--- a/makefile.osx
+++ b/makefile.osx
@@ -1,10 +1,10 @@
 
-ARCHS?=x86_64
+# ARCHS?=x86_64
 ARCHOPTS=$(addprefix -arch ,$(ARCHS))
 
 FRAMEWORKS=Cocoa Foundation
 
-FLAGS+=-D__MACOSX_CORE__ -D__MAUI_CHUGIN__ $(ARCHOPTS) -lc++ 
+FLAGS+=-D__MACOSX_CORE__ -D__MAUI_CHUGIN__ $(ARCHOPTS) 
 LDFLAGS+=-shared $(addprefix -framework ,$(FRAMEWORKS)) \
 -ObjC $(ARCHOPTS) \
 -Wl,-undefined,dynamic_lookup
